Archive2/f3/c7a78ee7cf7f54/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In instantiation of 'class Foo<double>':
main.cpp:22:21:   required from here
main.cpp:11:5: error: 'double' is not a class, struct, or union type
     Foo(typename T::value_type& b):bar(b){}
     ^
